--- a/BookListRazor/BookListRazor/Pages/BookList/Index.cshtml
+++ b/BookListRazor/BookListRazor/Pages/BookList/Index.cshtml
@@ -7,7 +7,7 @@
         <h2 class="text-info">Book List</h2>
     </div>
     <div class="col-md-2">
-        <a asp-page="Create" class="btn btn-info form-control text-white">Create New Book</a>
+        <a asp-page="Upsert" class="btn btn-info form-control text-white">Create New Book</a>
     </div>
 
     <div class="col-12 border p-3 mt-3">
@@ -44,7 +44,7 @@
                                 @Html.DisplayFor(m => book.ISBN)
                             </td>
                             <td>
-                                <button class="btn btn-danger btn-sm">Delete</button>
+                                <button asp-page-handler="Delete" asp-route-id="@book.Id" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete?')">Delete</button>
                                 <a asp-page="Edit" asp-route-id="@book.Id" class="btn btn-success btn-sm text-white">Edit</a>
                             </td>
                         </tr>
@@ -57,5 +57,27 @@
             }
         </form>
     </div>
+
+    <div class="col-12" style="text-align:center">
+        <br />
+        <span class="h3 text-info">OR</span>
+        <br />
+        <br />
+    </div>
+    <div class="col-12 border p-3">
+        <table id="DT_load" class="table table-striped table-bordered" style="width:100%">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th> Author</th>
+                    <th> ISBN</th>
+                    <th></th>
+                </tr>
+            </thead>
+        </table>
+    </div>
 </div>
 
+@section Scripts{ 
+    <script src="~/js/bookList.js"></script>
+}
